# educore-api

./: .env.example  .flake8  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_models.py  test_views.py
apps/assessments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/assessments/migrations/: 0001_initial.py
apps/assessments/tests/: test_views.py
apps/content/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/content/migrations/: 0001_initial.py
apps/content/tests/: test_views.py
apps/courses/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py
apps/courses/tests/: test_models.py  test_views.py
docker/: Dockerfile  entrypoint.sh
educore/: asgi.py  celery.py  urls.py  views.py  wsgi.py
educore/settings/: base.py  dev.py  prod.py
requirements/: base.txt  dev.txt  prod.txt
templates/: landing.html
