[project]
name = "educore-api"
version = "1.0.0"
description = "Production-grade Learning Management System REST API"
requires-python = ">=3.9"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "educore.settings.dev"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
known_django = "django"
known_drf = "rest_framework"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "DRF", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*"]
line_length = 120

[tool.black]
line-length = 120
target-version = ["py312"]
